MFC r299182 If ALTQ is defined in the kern conf, switch to Legacy Mode.

PR:		208409

Former-commit-id: 63f73dc9af68985d2a5b682d319fe6c9c4a9cab9